# RayTracing

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Raytracing  compile_commands.json  notes.md  reference.md
assets/: cornell_box.json  hyperion_rect_light.json  mustang_red.json  staircase.json  teapot.json
notes/: notes.md
shaders/: aabb.glsl  colorful.comp  count_geometry.comp  count_grid.comp  full_screen.frag  full_screen.vert  geometry.glsl  material.glsl  random.glsl  raytracer.comp  raytracing.comp  rect.frag  rect.vert  sort_grid_geometry_by_grid.comp  uniform_grid.glsl  write_grid_geometry.comp
shaders/common/: brdf_lut.comp  cubemap.comp  environment_map.comp  environment_map.frag  environment_map.vert  geometry.glsl  lambertian_diffuse_irradiance_map.comp  light.glsl  low_discrepancy_sequence.glsl  material.glsl  prefiltered_environment_map.comp  random.glsl  to_ldr.glsl  unpack.glsl  utils.glsl
shaders/rasterizer/: disney_brdf.frag  disney_brdf.vert  environment_map.frag  environment_map.vert  rasterize.frag  rasterize.vert
shaders/raytracer/: aabb.glsl  bvh.glsl  bvh_preview.comp  camera.glsl  disney.glsl  megakernel_raytracer.comp  ray.glsl  raytracer.comp  rect.frag  rect.vert  sampling.glsl  state.glsl
shaders/renderer/: cook_torrance.frag  cook_torrance.vert
src/: Check.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanLoad.cpp  VulkanPipeline.cpp  camera.cpp  camera.h  check.h  file.cpp  glad_impl.cpp  high_resolution_clock.h  main.cpp  renderable.cpp  renderable.h  shader.cpp  shader.h  stb_image_impl.cpp  stb_image_write_impl.cpp  test_scene.h  texture.cpp  vma_impl.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_check.h  vulkan_commands.cpp  vulkan_commands.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_header.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  (+8 more)
src/asset/: camera.cpp  camera.h  light.h  material.h  mesh.cpp  mesh.h  renderable.cpp  renderable.h  scene.cpp  scene.h  texture.cpp  texture.h  tinyobj_impl.cpp
src/raytracer/: brute_force_raytracer.cpp  predefined_scene.cpp  raytracer.h  raytracer_camera.cpp  raytracer_camera.h
src/renderer/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  bvh_preview.cpp  cook_torrance_brdf_renderer.cpp  megakernel_raytracer.cpp  rasterizer.cpp  raytracer.cpp  render_context.cpp  render_context.h  render_options.h  renderer.h
src/utils/: file.cpp  file.h  high_resolution_clock.cpp  to_span.h
src/vulkan/: vma_impl.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_commands.cpp  vulkan_commands.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_load.cpp  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h
